Changed a name of a class

--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -217,7 +217,7 @@
     <Compile Include="Models\UserAccount.cs" />
     <Compile Include="Models\UserProfileEdit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringCipher.cs" />
+    <Compile Include="Encryptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
