--- a/PasswordGenerator/Web.config
+++ b/PasswordGenerator/Web.config
@@ -83,6 +83,7 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
+    <clear />
 		<add name="UserDbContext" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=UserAccount;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 </configuration>
