--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -208,17 +208,20 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="ConfigurationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="IConfigurationProvider.cs" />
     <Compile Include="Migrations\201604111051345_InitialCreate.cs" />
     <Compile Include="Migrations\201604111051345_InitialCreate.Designer.cs">
       <DependentUpon>201604111051345_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\UserDbContext.cs" />
+    <Compile Include="Models\IUserAccountDbContext.cs" />
+    <Compile Include="Models\UserAccountDbContext.cs" />
     <Compile Include="Models\UserAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Encryptor.cs" />
